*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6474 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,22 @@
+1999-07-19  Assar Westerlund  <assar@sics.se>
+
+	* roken.h.in: <netdb.h>: include
+	(copyhostent, freehostent, getipnodebyname, getipnodebyaddr): add
+	prototypes
+
+	* roken-common.h: new constants for getipnodeby*
+
+	* Makefile.in (SOURCES): add freehostent, copyhostent,
+ 	getipnodebyname, getipnodebyaddr
+
+	* freehostent.c: new file
+
+	* copyhostent.c: new file
+
+	* getipnodebyaddr.c: new file
+
+	* getipnodebyname.c: new file
+
 1999-07-13  Assar Westerlund  <assar@sics.se>
 
 	* roken.h.in (k_getpwnam): update prototype
