Re-added parameter changed list from 2.0.4 into WHATSNEW. Re-ran make yodldocs. Jeremy.

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -990,7 +990,7 @@ parameter for details\&. Note that some are synonyms\&.
 \fBdirectory mode\fP
 .IP 
 .IP o 
-linf(\fBdirectory security mask\fP)(directorysecuritymask)
+\fBdirectory security mask\fP
 .IP 
 .IP o 
 \fBdont descend\fP
