preparing for release of 2.0.5

--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "20 May 1999" "smbmnt 2.0.4b"
+.TH SMBMNT 8 "21 Jul 1999" "smbmnt 2.0.5"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
