--- a/docs/manpages/smbumount.8
+++ b/docs/manpages/smbumount.8
@@ -1,4 +1,4 @@
-.TH SMBUMOUNT 8 "20 May 1999" "smbumount 2.0.4b"
+.TH SMBUMOUNT 8 "21 Jul 1999" "smbumount 2.0.5"
 .SH NAME
 smbumount \- umount for normal users
 .SH SYNOPSIS
