preparing for release of 2.0.5a

--- a/docs/manpages/make_smbcodepage.1
+++ b/docs/manpages/make_smbcodepage.1
@@ -1,4 +1,4 @@
-.TH MAKE_SMBCODEPAGE 1 "21 Jul 1999" "make_smbcodepage 2.0.5"
+.TH MAKE_SMBCODEPAGE 1 "22 Jul 1999" "make_smbcodepage 2.0.5a"
 .PP 
 .SH "NAME" 
 make_codepage \- Construct a codepage file for Samba
