--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH NMBLOOKUP 1 "21 Jul 1999" "nmblookup 2.0.5"
+.TH NMBLOOKUP 1 "22 Jul 1999" "nmblookup 2.0.5a"
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
