--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1,4 +1,4 @@
-.TH SMB.CONF 5 "21 Jul 1999" "smb.conf 2.0.5"
+.TH SMB.CONF 5 "22 Jul 1999" "smb.conf 2.0.5a"
 .PP 
 .SH "NAME" 
 smb\&.conf \- The configuration file for the Samba suite
