--- a/docs/manpages/smbd.8
+++ b/docs/manpages/smbd.8
@@ -1,4 +1,4 @@
-.TH SMBD 8 "21 Jul 1999" "smbd 2.0.5"
+.TH SMBD 8 "22 Jul 1999" "smbd 2.0.5a"
 .PP 
 .SH "NAME" 
 smbd \- server to provide SMB/CIFS services to clients
