--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH SMBMOUNT 8 "21 Jul 1999" "smbmount 2.0.5"
+.TH SMBMOUNT 8 "22 Jul 1999" "smbmount 2.0.5a"
 .SH NAME
 smbmount \- mount smb file system
 .SH SYNOPSIS
