--- a/docs/manpages/smbpasswd.5
+++ b/docs/manpages/smbpasswd.5
@@ -1,4 +1,4 @@
-.TH SMBPASSWD 5 "21 Jul 1999" "smbpasswd 2.0.5"
+.TH SMBPASSWD 5 "22 Jul 1999" "smbpasswd 2.0.5a"
 .PP 
 .SH "NAME" 
 smbpasswd \- The Samba encrypted password file
