--- a/docs/manpages/smbstatus.1
+++ b/docs/manpages/smbstatus.1
@@ -1,4 +1,4 @@
-.TH SMBSTATUS 1 "21 Jul 1999" "smbstatus 2.0.5"
+.TH SMBSTATUS 1 "22 Jul 1999" "smbstatus 2.0.5a"
 .PP 
 .SH "NAME" 
 smbstatus \- report on current Samba connections
