--- a/docs/manpages/smbtar.1
+++ b/docs/manpages/smbtar.1
@@ -1,4 +1,4 @@
-.TH SMBTAR 1 "21 Jul 1999" "smbtar 2.0.5"
+.TH SMBTAR 1 "22 Jul 1999" "smbtar 2.0.5a"
 .PP 
 .SH "NAME" 
 smbtar \- shell script for backing up SMB/CIFS shares directly to UNIX tape drives
