--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,4 +1,4 @@
-.TH TESTPARM 1 "21 Jul 1999" "testparm 2.0.5"
+.TH TESTPARM 1 "22 Jul 1999" "testparm 2.0.5a"
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
