--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH LMHOSTS 5 "21 Jul 1999" "lmhosts 2.0.5"
+.TH LMHOSTS 5 "22 Jul 1999" "lmhosts 2.0.5a"
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
