--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -1,4 +1,4 @@
-.TH NMBD 8 "21 Jul 1999" "nmbd 2.0.5"
+.TH NMBD 8 "22 Jul 1999" "nmbd 2.0.5a"
 .PP 
 .SH "NAME" 
 nmbd \- NetBIOS name server to provide NetBIOS over IP
