--- a/docs/manpages/samba.7
+++ b/docs/manpages/samba.7
@@ -1,4 +1,4 @@
-.TH SAMBA 7 "21 Jul 1999" "samba 2.0.5"
+.TH SAMBA 7 "22 Jul 1999" "samba 2.0.5a"
 .PP 
 .SH "NAME" 
 Samba \- A Windows SMB/CIFS fileserver for UNIX
