--- a/docs/manpages/smbclient.1
+++ b/docs/manpages/smbclient.1
@@ -1,4 +1,4 @@
-.TH SMBCLIENT 1 "21 Jul 1999" "smbclient 2.0.5"
+.TH SMBCLIENT 1 "22 Jul 1999" "smbclient 2.0.5a"
 .PP 
 .SH "NAME" 
 smbclient \- ftp-like client to access SMB/CIFS resources on servers
