--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "21 Jul 1999" "smbmnt 2.0.5"
+.TH SMBMNT 8 "22 Jul 1999" "smbmnt 2.0.5a"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
