--- a/docs/manpages/smbrun.1
+++ b/docs/manpages/smbrun.1
@@ -1,4 +1,4 @@
-.TH SMBRUN 1 "21 Jul 1999" "smbrun 2.0.5"
+.TH SMBRUN 1 "22 Jul 1999" "smbrun 2.0.5a"
 .PP 
 .SH "NAME" 
 smbrun \- interface program between smbd and external programs
