--- a/docs/manpages/smbsh.1
+++ b/docs/manpages/smbsh.1
@@ -1,4 +1,4 @@
-.TH SMBSH 1 "21 Jul 1999" "smbsh 2.0.5"
+.TH SMBSH 1 "22 Jul 1999" "smbsh 2.0.5a"
 .PP 
 .SH "NAME" 
 smbsh \- Allows access to Windows NT filesystem using UNIX commands
