--- a/docs/manpages/swat.8
+++ b/docs/manpages/swat.8
@@ -1,4 +1,4 @@
-.TH SWAT 8 "21 Jul 1999" "swat 2.0.5"
+.TH SWAT 8 "22 Jul 1999" "swat 2.0.5a"
 .PP 
 .SH "NAME" 
 swat \- Samba Web Administration Tool
