--- a/lib/kafs/ChangeLog
+++ b/lib/kafs/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-22  Assar Westerlund  <assar@sics.se>
+
+	* afssysdefs.h: define AFS_SYSCALL to 73 for Solaris 2.7
+
 1999-07-07  Assar Westerlund  <assar@sics.se>
 
 	* afskrb5.c (krb5_realm_of_cell): new function
