*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6491 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 1999-07-22  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/n-fold-test.c (main): print the correct data
+
+	* appl/Makefile.am (SUBDIRS): add kf
+
+	* appl/kf: new program.  From Miroslav Ruda <ruda@ics.muni.cz>
+
+	* kdc/hprop.c: declare some variables unconditionally to simplify
+ 	things
+
 	* kpasswd/kpasswdd.c: initialize kadm5 connection for every change
  	(otherwise the modifier in the database doesn't get set)
 
