*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6496 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changed in release 0.1h:
+
+ * kf: new program for forwarding credentials
+ * portability fixes
+ * make forwarding credentials work with MIT code
+ * better conversion of ka database
+ * add etc/services.append
+ * correct `modified by' from kpasswdd
+ * lots of bug fixes
+
 Changes in release 0.1g:
 
  * kgetcred: new program for explicitly obtaining tickets
