*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6506 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-07-23  Assar Westerlund  <assar@sics.se>
+
+	* appl/kf/kfd.c: clean-up and more paranoia
+
+	* etc/services.append: add kf
+
+	* appl/kf/kf.c: rename tk_file to ccache for consistency.  clean-up
+
 1999-07-22  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/n-fold-test.c (main): print the correct data
