--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-24  Assar Westerlund  <assar@sics.se>
+
+	* krb-struct-sockaddr-sa-len.m4: not used any longer.  removed.
+
 1999-06-13  Assar Westerlund  <assar@sics.se>
 
 	* krb-struct-spwd.m4: consequent name of cache variables
