*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6530 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-24  Assar Westerlund  <assar@sics.se>
 
+	* have-type.m4: stolen from Arla
+
 	* krb-struct-sockaddr-sa-len.m4: not used any longer.  removed.
 
 1999-06-13  Assar Westerlund  <assar@sics.se>
