--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,4 +1,6 @@
 1999-07-24  Assar Westerlund  <assar@sics.se>
+	
+	* have-type.m4: try to get autoheader to co-operate
 
 	* have-type.m4: stolen from Arla
 
