--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-07-24  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/get_addrs.c (find_all_addresses): try to use SA_LEN to
+ 	step over addresses if there's no `sa_lan' field
+
 	* lib/krb5/sock_principal.c (krb5_sock_to_principal): simplify by
  	using `struct sockaddr_storage'
 
