--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-24  Assar Westerlund  <assar@sics.se>
 
+	* rsh_locl.h: <shadow.h>
+
 	* rsh.c, rshd.c: improve forwarding and implement unique ccache on
  	server.  From Miroslav Ruda <ruda@ics.muni.cz>
 
