*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6556 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-26  Assar Westerlund  <assar@sics.se>
+
+	* snprintf.c: some signed vs unsigned casts
+	
 1999-07-24  Assar Westerlund  <assar@sics.se>
 
 	* roken.h.in (struct sockaddr_storage): define it needed
