--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,9 @@
 1999-07-26  Assar Westerlund  <assar@sics.se>
 
+	* inet_ntop.c: new file
+
+	* Makefile.am (EXTRA_libroken_la_SOURCES): add inet_ntop.c
+
 	* Makefile.am: move some files from libroken_la_SOURCES to
  	EXTRA_libroken_la_SOURCES
 
