--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 1999-07-26  Assar Westerlund  <assar@sics.se>
 
+	* configure.in: rokenize inet_ntop
+
 	* lib/krb5/store_fd.c: lots of changes from size_t to ssize_t
 	
 	* lib/krb5/store_mem.c: lots of changes from size_t to ssize_t
