*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6590 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-26  Assar Westerlund  <assar@sics.se>
 
+	* Makefile.am: set version to 1:0:1
+
 	* roken.h.in (inet_ntop): add prototype
 
  	* roken-common.h: (INET{,6}_ADDRSTRLEN): add
