--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 1999-07-26  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/Makefile.am: bump version to 3:0:2
+
+	* lib/hdb/Makefile.am: bump version to 2:1:0
+
+	* lib/asn1/Makefile.am: bump version to 1:1:0
+
+1999-07-26  Assar Westerlund  <assar@sics.se>
+
 	* Release 0.1j
 
 1999-07-26  Assar Westerlund  <assar@sics.se>
