--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-07-26  Johan Danielsson  <joda@pdc.kth.se>
 
+	* lib/krb5/Makefile.am: bump version number (changed function
+	signatures)
+
 	* lib/hdb/Makefile.am: bump version number (changes to some
 	function signatures)
 
