--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-27  Assar Westerlund  <assar@sics.se>
+
+	* mini_inetd.c: support IPv6
+
 1999-07-26  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: set version to 1:0:1
