--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-28  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am.common (install-build-headers): add dependencies
+
 1999-07-24  Assar Westerlund  <assar@sics.se>
 	
 	* have-type.m4: try to get autoheader to co-operate
