*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6612 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-28  Assar Westerlund  <assar@sics.se>
+
+	* ftp/gssapi.c (gss_auth): check return value from
+ 	`gss_import_name' and print error messages if it fails
+
 1999-06-15  Assar Westerlund  <assar@sics.se>
 
 	* ftp/krb4.c (krb4_auth): type correctness
