*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6633 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/gssapi/ChangeLog
+++ b/lib/gssapi/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-28  Assar Westerlund  <assar@sics.se>
 
+	* gssapi.h (GSS_C_AF_INET6): add
+
 	* import_name.c (import_hostbased_name): set minor_status
 
 1999-07-26  Assar Westerlund  <assar@sics.se>
