--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-28  Assar Westerlund  <assar@sics.se>
 
+	* configure.in: more inet_pton to roken
+
 	* lib/krb5/principal.c (krb5_sname_to_principal): use
  	getipnodebyname
 
