--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,14 @@
+1999-07-28  Assar Westerlund  <assar@sics.se>
+
+	* roken.h.in (inet_pton): add prototype
+
+	* Makefile.am (EXTRA_libroken_la_SOURCES): add inet_pton
+
+	* inet_pton.c: new file
+
+	* getipnodebyname.c (getipnodebyname): try gethostbyname2 if we
+ 	have it
+
 1999-07-27  Assar Westerlund  <assar@sics.se>
 
 	* mini_inetd.c: support IPv6
