*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6639 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-07-28  Assar Westerlund  <assar@sics.se>
 
+	* lib/asn1/Makefile.am: bump version to 1:2:0
+
+	* lib/krb5/Makefile.am: bump version to 3:1:0
+
 	* configure.in: more inet_pton to roken
 
 	* lib/krb5/principal.c (krb5_sname_to_principal): use
