*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6662 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-28  Assar Westerlund  <assar@sics.se>
 
+	* common/socket.c: moved to roken
+
 	* common/socket.c: new file with generic socket functions
 
 	* ftpd/ftpd.c: make it more AF-neutral and v6-capable
