--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,13 @@
+1999-07-29  Assar Westerlund  <assar@sics.se>
+
+	* rshd.c: v6-ify
+
+	* rsh.c: v6-ify
+
+1999-07-28  Assar Westerlund  <assar@sics.se>
+
+	* rsh_locl.h: move around kafs.h
+
 1999-07-24  Assar Westerlund  <assar@sics.se>
 
 	* rsh_locl.h: <shadow.h>
