*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6664 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-29  Assar Westerlund  <assar@sics.se>
+
+	* have-struct-field.m4: quote macros when undefining
+
 1999-07-28  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am.common (install-build-headers): add dependencies
