Fixed quoting/escaping bug in example code. (This used to be commit 5e0994b8bb960fe754e889c797bd91e64be946f1)

--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -26,7 +26,7 @@ To mount an smb file system, I suggest using the option
 .B -c
 for smbmount to pass the mount command. For example, use
 
-smbmount "\\\\server\\tmp" -c 'mount /mnt -u 123 -g 456'
+smbmount '\\\\server\\tmp' -c 'mount /mnt -u 123 -g 456'
 
 to mount the tmp share of server on /mnt, giving it a local uid 123
 and a local gid 456.
