*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6679 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-02  Assar Westerlund  <assar@sics.se>
+
+	* telnetd/telnetd.c (doit): only free hp if != NULL.  From: Jonas
+ 	Oberg <jonas@coyote.org>
+
 1999-07-29  Assar Westerlund  <assar@sics.se>
 
 	* telnetd/telnetd.c (doit): remove unused variable mapped_sin
