--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-03  Assar Westerlund  <assar@sics.se>
+
+	* ftp/gssapi.c (gss_auth): initialize application_data in bindings
+
 1999-08-02  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpcmd.y: save file names when doing commands that might
