*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6687 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-03  Assar Westerlund  <assar@sics.se>
 
+	* ftp/ftp.c (active_mode): hide failure of EPRT by setting verbose
+
 	* ftp/gssapi.c (gss_auth): initialize application_data in bindings
 
 1999-08-02  Assar Westerlund  <assar@sics.se>
